--- a/HTML/choose_template.html
+++ b/HTML/choose_template.html
@@ -9,6 +9,7 @@
    <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet" />
    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+   <link rel="stylesheet" href="../Hover-css/hover.min.css.css">
    <link rel="stylesheet" href="../CSS/choose_template.css">
    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 </head>
@@ -23,24 +24,21 @@
          <a href="">Business City</a>
       </div>
       <div class="navBar_buttons">
-         <ul>
-            <li><a href="#">النهائية</a></li>
-            <li><a href="#">من نحن</a></li>
-            <li><a href="#">خدماتنا</a></li>
-            <li><a href="../HTML/choose_template.html">الرئيسية</a></li>
+         <ul class="list">
+            <li class="list1"><a class="hvr-pulse-shrink" href="#">النهائية</a></li>
+            <li class="list1"><a class="hvr-pulse-shrink" href="#">من نحن</a></li>
+            <li class="list1"><a class="hvr-pulse-shrink" href="#">خدماتنا</a></li>
+            <li class="list1"><a class="hvr-pulse-shrink" href="../HTML/choose_template.html">الرئيسية</a></li>
          </ul>
       </div>
-      <div class="mobileDropMenu">
+      <div class="mobileDropMenu toggle-menu">
          <img src="../MEDIA/DropDown(chooseT).svg" alt="">
       </div>
    </div>
-
    <div class="header">
       <p>كيف تبدأ</p>
    </div>
-
    <div class="HeaderBoxesContainer">
-
       <div class="box">
          <div class="serviceBox">
             <div class="service-icon">
@@ -52,7 +50,6 @@
                امتلك مجانًا أو اشترِ واحدًا مخص</p>
          </div>
       </div>
-
       <div class="box">
          <div class="serviceBox two">
             <div class="service-icon ">
@@ -65,7 +62,6 @@
                جميع احتياجاتك في مكان واحد</p>
          </div>
       </div>
-
       <div class="box">
          <div class="serviceBox three">
             <div class="service-icon ">
@@ -78,7 +74,6 @@
          </div>
       </div>
    </div>
-
    <div class="topWaveBox">
       <img src="../MEDIA/BlackWave(chooseT).svg" alt="" srcset="">
    </div>
@@ -114,15 +109,12 @@
          </div>
       </div>
    </div>
-
    <div class="botWaveBox">
       <img src="../MEDIA/BlackWave2(chooseT).svg" alt="" srcset="">
    </div>
-
    <div class="header">
       <p>طلب محاولة الاتصال المجاني</p>
    </div>
-
    <div class="contactContainer">
       <div data-aos="fade-down" data-aos-anchor-placement="top-center" class="contactBox">
          <form action="">
@@ -135,6 +127,35 @@
       <img data-aos="fade-down" data-aos-anchor-placement="top-center" src="../MEDIA/contactImg(chooseT).png" alt=""
          srcset="">
    </div>
+   <div class="footer">
+      <div class="container">
+         <div class="box-footer">
+            <h3>الصفحات</h3>
+            <p>الرئيسية</p>
+            <p>الخدمات</p>
+            <p>من نحن</p>
+         </div>
+         <div class="box-footer">
+            <h3>الاتصال</h3>
+            <p>الأردن-عمان</p>
+            <p>لبنان-بيروت</p>
+            <p>السعودية-الرياض</p>
+            <p>الكويت</p>
+            <p>info@Busnisic.com</p>
+            <p>065340334</p>
+         </div>
+         <div class="box-footer">
+            <h3>التواصل الاجتماعي</h3>
+            <div class="icons-footer">
+               <img class="hvr-wobble-vertical" src="../MEDIA/image/facbook.svg" alt="facebook">
+               <img class="hvr-wobble-vertical" src="../MEDIA/image/instgram.svg" alt="instgram">
+               <img class="hvr-wobble-vertical" src="../MEDIA/image/whatsup.svg" alt="whatsup">
+               <img class="hvr-wobble-vertical" src="../MEDIA/image/linkedin.svg" alt="linkedin">
+            </div>
+         </div>
+      </div>
+   </div>
+   <script src="../JS/choose_template.js"></script>
 </body>
 
 </html>
